<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/picShopDetail"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="-4dp"
                android:layout_marginEnd="-4dp"
                android:background="@drawable/back_shop_title"
                app:layout_constraintBottom_toBottomOf="@id/nameShop"
                app:layout_constraintEnd_toEndOf="@id/nameShop"
                app:layout_constraintStart_toStartOf="@id/nameShop"
                app:layout_constraintTop_toTopOf="@id/nameShop" />


            <TextView
                android:id="@+id/nameShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/picShopDetail"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/qrButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rectangle_button"
                android:text="@string/text_button_qr_detail"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/picShopDetail" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_10"
                android:paddingBottom="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="@id/qrButton"
                app:layout_constraintStart_toStartOf="@id/qrButton"
                app:layout_constraintTop_toBottomOf="@id/qrButton">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/icInfo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_information"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/infoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/detail_condions"
                        app:layout_constraintBottom_toBottomOf="@id/icInfo"
                        app:layout_constraintStart_toEndOf="@id/icInfo"
                        app:layout_constraintTop_toTopOf="@id/icInfo" />

                    <TextView
                        android:id="@+id/descripInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="@dimen/indent_10"
                        android:layout_marginEnd="20dp"
                        android:maxLines="5"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/infoTitle"
                        tools:text="@tools:sample/lorem/random" />

                    <View
                        android:id="@+id/lineShop"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="@dimen/indent_10"
                        android:layout_marginTop="28dp"
                        android:alpha="0.25"
                        android:background="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/descripInfo" />

                    <ImageView
                        android:id="@+id/iconShop"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_building"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lineShop" />

                    <TextView
                        android:id="@+id/titleShop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/indent_10"
                        android:text="@string/title_shop"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@id/iconShop"
                        app:layout_constraintStart_toEndOf="@id/iconShop"
                        app:layout_constraintTop_toTopOf="@id/iconShop" />

                    <TextView
                        android:id="@+id/textShop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/indent_10"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@id/iconShop"
                        app:layout_constraintStart_toEndOf="@id/titleShop"
                        app:layout_constraintTop_toTopOf="@id/iconShop"
                        tools:text="@tools:sample/lorem" />

                    <View
                        android:id="@+id/lineAddress"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="28dp"
                        android:alpha="0.25"
                        android:background="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textShop" />

                    <ImageView
                        android:id="@+id/iconAddress"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_map"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lineAddress" />

                    <TextView
                        android:id="@+id/textAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@id/iconAddress"
                        app:layout_constraintStart_toEndOf="@id/iconAddress"
                        app:layout_constraintTop_toTopOf="@id/iconAddress"
                        tools:text="@tools:sample/lorem" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/addressGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:constraint_referenced_ids="lineAddress, iconAddress,textAddress" />

                    <View
                        android:id="@+id/linePhone"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="28dp"
                        android:alpha="0.25"
                        android:background="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textAddress" />

                    <ImageView
                        android:id="@+id/iconPhone"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linePhone" />

                    <TextView
                        android:id="@+id/textPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:autoLink="phone"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@id/iconPhone"
                        app:layout_constraintStart_toEndOf="@id/iconPhone"
                        app:layout_constraintTop_toTopOf="@id/iconPhone"
                        tools:text="@tools:sample/lorem" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/phoneGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:constraint_referenced_ids="linePhone, iconPhone,textPhone" />

                    <View
                        android:id="@+id/lineWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="28dp"
                        android:alpha="0.25"
                        android:background="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textPhone" />

                    <ImageView
                        android:id="@+id/iconWebsite"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_web"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lineWebsite" />

                    <TextView
                        android:id="@+id/textWebsite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@id/iconWebsite"
                        app:layout_constraintStart_toEndOf="@id/iconWebsite"
                        app:layout_constraintTop_toTopOf="@id/iconWebsite"
                        tools:text="@tools:sample/lorem" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/webGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:constraint_referenced_ids="lineWebsite, iconWebsite,textWebsite" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/backButText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_title_back"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="26dp"
                android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/topBackground"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#314C7D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTopDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_top_details"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/topBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/backToListShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_10"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/nameTopDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameTopDetails">

        <ImageView
            android:id="@+id/backShop"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_but_back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>